# smb-watch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  release.toml
.claude/: settings.local.json
.claude/skills/release/: SKILL.md
.github/workflows/: cache-warmup.yml  release.yml
plans/: jwt-auth-upload.md  rust-logi-auth.md
src/: auth.rs  cli.rs  google_auth.rs  main.rs  org_config.rs  scanner.rs  smb.rs  state.rs  uploader.rs
wix/: main.wxs
