[package]
name = "smb-watch"
version = "0.1.21"
edition = "2021"
description = "Monitor an SMB share for file changes and upload via HTTP"

[[bin]]
name = "smb-watch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["multipart", "json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
strip = true
lto = "thin"

[package.metadata.wix]
upgrade-guid = "D802E510-9F08-408B-BFFD-B0B491E7F908"
